--- a/index.html
+++ b/index.html
@@ -1653,6 +1653,7 @@ function autoLoadLayout(mode){
     <div>• Drag the background to pan the chart</div>
     <div>• Scroll/Pinch to zoom</div>
     <div>• Click Dept. Head to show staff</div>
+    <div>• Click and drag any photo to reorganize</div>
     <div>• Double-click a person for details</div>
     <div>• Use search to jump to a person or department</div>
   </div>
